# sn56-forge

./: .gitignore  NOTICE  README.md  pyproject.toml
experiments/34k-jul14/: ft34full.forge_run.json  ft34lora.forge_run.json  ft34lr2.forge_run.json
experiments/w3-jul16/: w3_results.jsonl  w3full.forge_run.json  w3lora.forge_run.json
forge/: baseline.py  cli.py  model.py  telemetry.py
forge/data/: loader.py  prompts.py  schema.py  split.py  tokenize.py
forge/data/chat_templates/: README.md
forge/tasks/: common.py  dispatch.py  dpo.py  fallback.py  grpo.py  instruct.py  rewards.py  trl_compat.py
forge/tuning/: best.py  callbacks.py  kl.py  plan.py
ops/docker/: standalone-text-trainer.cpu.dockerfile  standalone-text-trainer.dockerfile
tests/: test_baseline.py  test_contract.py  test_fallback_integrity.py  test_model_loading_safety.py  test_runtime_compat.py  test_telemetry_safety.py  test_text_artifact_safety.py  test_trl15_compat.py  test_units.py  test_validator_contract_parity.py
