[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sn56-forge"
version = "0.1.0"
description = "Original training pipeline for Gradients (Bittensor SN56) text tournaments."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# Runtime ML deps are installed in the Docker image (see ops/docker/), pinned
# there against the CUDA base so the versions that land on the validator GPU are
# exactly the ones we intend. They are declared here too for local installs, but
# torch is intentionally omitted: it comes from the base image / platform wheel.
dependencies = [
    "transformers==5.12.1",
    "peft==0.19.1",
    "trl==1.5.1",
    "datasets==4.8.4",
    "accelerate==1.13.0",
    "safetensors==0.8.0",
]

[project.optional-dependencies]
# 8-bit optimizer state (CUDA-only). Not required on CPU smoke tests.
cuda = ["bitsandbytes>=0.44"]
dev = ["pytest>=8"]

[project.scripts]
sn56-forge = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
"forge.data" = ["chat_templates/*.jinja", "chat_templates/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
